# langchain-OpenAI-Agent

./: .gitignore  README.md  get_response.py  main.py  output.txt  pyproject.toml  system_prompt.txt
