[project]
name = "langchain-openai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
    "yfinance>=1.5.1",
]
